--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,16 @@
                         "polyfills": ["zone.js"],
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
-                        "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.scss"],
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets",
+                            {
+                                "glob": "**/*",
+                                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                                "output": "/assets/"
+                            }
+                        ],
+                        "styles": ["src/theme.less", "src/styles.scss"],
                         "scripts": []
                     },
                     "configurations": {
@@ -85,5 +93,8 @@
                 }
             }
         }
+    },
+    "cli": {
+        "analytics": "5216f27a-8ecd-45a8-8585-62681117f135"
     }
 }
