--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
     "jsxSingleQuote": true,
     "quoteProps": "as-needed",
     "trailingComma": "es5",
-    "singleAttributePerLine": true,
+    "singleAttributePerLine": false,
     "htmlWhitespaceSensitivity": "css",
     "vueIndentScriptAndStyle": false,
     "proseWrap": "preserve",
